k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
      - "43.205.253.188"
  rules:
  - host: "43.205.253.188"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nestjs-es-api
            port:
              number: 80
